# The-Lexicon-Project

./: .gitignore  CMakeLists.txt  README.md  README.txt  linkedList.cpp  linkedList.h  main.cpp  node.h
DB/: JMdict.db  dbManager.cpp  dbManager.h  sqlite3.lib
Engine/: lexical.cpp  lexical.h  node.cpp  node.h  syntaxTree.cpp  syntaxTree.h
